# pynorare

./: README.md  RELEASING.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/pynorare/: __init__.py  __main__.py  api.py  cli_util.py  data.py  dataset.py  files.py  log.py  norare.py  norms.py  types.py  util.py
src/pynorare/commands/: app.py  check.py  download.py  ls.py  map.py  show.py  stats.py  validate.py
tests/: conftest.py  test_api.py  test_cli.py  test_dataset.py  test_files.py  test_util.py
tests/repos/: concept_set_meta.tsv  norare.tsv
tests/repos/concept_set_meta/ds2/: map.py
tests/repos/concept_set_meta/dsid/: dsid.tsv  map.py
tests/repos/datasets/ds2/: ds2.tsv  ds2.tsv-metadata.json  map.py  norare.py
tests/repos/datasets/ds2/raw/: test.xls
tests/repos/datasets/dsid/: dsid.tsv-metadata.json  map.py  norare.py
tests/repos/references/: references.bib
