[metadata]
name = pynorare
version = 0.2.2.dev0
author = Johann-Mattis List and Robert Forkel
author_email = mattis.list@lingpy.org
description = A Python library to handle NoRaRe data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics
license = Apache 2.0
license_files = LICENSE
url = https://github.com/concepticon/pynorare
project_urls =
    Bug Tracker = https://github.com/concepticon/pynorare/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    csvw>=3.1.1
    pyconcepticon>=2.5
    attrs>=18.2
    clldutils>=3.1.2
    cldfcatalog>=1.3
    tqdm
    uritemplate
    xlrd~=2.0
    openpyxl>=1.1.0
    nltk
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    norare = pynorare.__main__:main

[options.extras_require]
dev =
    flake8
    wheel
    twine
    tox
    build
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[easy_install]
zip_ok = false

[tool:pytest]
minversion = 3.6
testpaths = tests
addopts =
    --cov

[coverage:run]
source =
    pynorare
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py37, py38, py39, py310
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
